chore: configure vuetify

--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
   "dependencies": {
     "@pinia/nuxt": "^0.4.2",
     "c8": "^7.12.0",
-    "pinia": "^2.0.22"
+    "pinia": "^2.0.22",
+    "sass": "^1.56.1",
+    "vuetify": "^3.0.1"
   }
 }
