chore(deps): add `nuxt-proxy`

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@mdi/font": "^7.0.96",
     "@pinia/nuxt": "^0.4.2",
     "c8": "^7.12.0",
+    "nuxt-proxy": "^0.3.4",
     "pinia": "^2.0.22",
     "sass": "^1.56.1",
     "vuetify": "^3.0.1"
