--- a/package.json
+++ b/package.json
@@ -60,8 +60,10 @@
     "@mdi/font": "^7.0.96",
     "@pinia/nuxt": "^0.4.2",
     "c8": "^7.12.0",
+    "nuxt-graphql-client": "^0.2.13",
     "nuxt-proxy": "^0.3.4",
     "pinia": "^2.0.22",
+    "pinia-plugin-persistedstate": "^2.4.0",
     "sass": "^1.56.1",
     "vuetify": "^3.0.1"
   }
