--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
-    "test:e2e": "playwright test"
+    "test:e2e": "playwright test",
+    "storybook": "start-storybook -p 6006 -s ./public,./assets"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
@@ -24,6 +25,11 @@
     "@nuxt/test-utils-edge": "^3.0.0-rc.11-27720480.3ed63a6",
     "@nuxtjs/eslint-config-typescript": "^11.0.0",
     "@playwright/test": "^1.25.2",
+    "@storybook/addon-a11y": "^6.5.13",
+    "@storybook/addon-essentials": "^6.5.13",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/builder-vite": "^0.2.5",
+    "@storybook/vue3": "^6.5.13",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/vue": "^6.6.1",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
@@ -59,6 +65,7 @@
   "dependencies": {
     "@mdi/font": "^7.0.96",
     "@pinia/nuxt": "^0.4.2",
+    "@storybook/theming": "^6.5.13",
     "c8": "^7.12.0",
     "pinia": "^2.0.22",
     "sass": "^1.56.1",
