--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "@commitlint/types": "^17.0.0",
     "@nuxt/test-utils-edge": "^3.0.0-rc.11-27720480.3ed63a6",
     "@nuxtjs/eslint-config-typescript": "^11.0.0",
+    "@pinia/testing": "^0.0.14",
     "@playwright/test": "^1.25.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/vue": "^6.6.1",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
-    "@vitejs/plugin-vue": "^3.1.0",
+    "@vitejs/plugin-vue": "^3.2.0",
     "@vitest/coverage-c8": "^0.23.2",
     "@vue/eslint-config-standard": "^8.0.1",
     "@vue/eslint-config-typescript": "^11.0.1",
